// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows usage of dot delimited path to access nested attribute 1`] = `

<span class="ais-highlight">
  nested
  <em>
    val
  </em>
</span>

`;

exports[`renders proper HTML 1`] = `

<span class="ais-highlight">
  con
  <em>
    ten
  </em>
  t
</span>

`;

exports[`should render an empty string in production if attribute is not highlighted 1`] = `

<span class="ais-highlight">
</span>

`;
